# -motorControll

./: Dockerfile  pyproject.toml  sample.py
api/: main.py
api/models/: connect_ev3_dev.py
api/models/motor/: get_moters_list.py  list.py
api/models/motor/speed/: get.py  set.py
api/routers/: motors.py  sensors.py
api/schemas/motors/: init.py  list.py
api/schemas/motors/angle/: get.py
api/schemas/motors/aposition/: get.py
api/schemas/motors/dps/: get.py
api/schemas/motors/polarity/: get.py  set.py
api/schemas/motors/position/: get.py
api/schemas/motors/pwm_value/: get.py  pare.py  set.py
api/schemas/motors/run_for_degrees/: pair.py  set.py
api/schemas/motors/speed/: get.py  set.py
api/schemas/sensors/: list.py  type.py
api/schemas/sensors/gyro/: list.py
api/schemas/sensors/gyro/get/: angle.py  fas.py  rate.py  speed.py
api/schemas/sensors/gyro/set/: calibration.py  modes.py
api/schemas/sensors/parameter/: get.py
api/service/connection/: connect_ev3_dev.py  connect_motors.py
api/service/connection/motor/: init.py  list.py
api/service/connection/motor/angle/: get.py
api/service/connection/motor/count_per_rot/: get.py
api/service/connection/motor/dps/: get.py
api/service/connection/motor/polarity/: get.py  set.py
api/service/connection/motor/pwm_value/: get.py  pare.py  set.py
api/service/connection/motor/speed/: get.py  set.py
api/service/connection/motors/aposition/: get.py
api/service/connection/motors/dps/: get.py
api/service/connection/sensors/: list.py  type.py
demo-app/: pyproject.toml
tests/: test_main.py
(+9 files in other folders)
